# i2v-motion-experiments

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/: streamlit_app.py
configs/experiments/: example_svd_5s.yaml  example_wan2_1_vace_14b_5s.yaml  smoke_wan2_1_vace_14b.yaml  smoke_wan2_1_vace_14b_r2v.yaml  wan_vace_beer_dolly_in.yaml  wan_vace_beer_drink_ripple.yaml  wan_vace_beer_food_glaze.yaml  wan_vace_beer_food_steam.yaml  wan_vace_beer_man_topview_face_reveal.yaml  wan_vace_beer_man_topview_lift.yaml  wan_vace_beer_man_topview_steam.yaml  wan_vace_beer_meme_ai_animal.yaml  wan_vace_beer_meme_ai_character.yaml  wan_vace_beer_menu_hero.yaml  wan_vace_coffee_consume_drink.yaml  wan_vace_coffee_man_dolly_in.yaml  wan_vace_coffee_man_dolly_pan.yaml  wan_vace_coffee_man_lift_to_camera.yaml  wan_vace_coffee_man_offer_drink.yaml  wan_vace_coffee_man_rim_light.yaml  wan_vace_coffee_man_silhouette.yaml  wan_vace_coffee_man_surface_shimmer.yaml  wan_vace_japan_beer_surface_shimmer.yaml  wan_vace_japan_consume_product.yaml  wan_vace_man_box_dolly_in.yaml  (+74 more)
docker/: .dockerignore  Dockerfile  compose.yaml
docs/: ADAPTER_CONTRACT.md  EXPERIMENT_LOG.md  ROADMAP.md  SCHEMA.md  TEMPLATES.md
scripts/: launch_batch9_after_current.sh  launch_round9_ext_overnight.sh  launch_round9_overnight.sh  migrate_meta_v2.py  migrate_outputs.py  normalize_taxonomy_v2active.py  resume_batch.sh  run_batch.py  run_finetune.py  run_inference.py  setup_cache_perms.sh  sync_samples.py  sync_to_drive.py  wait_and_launch_round9_ext.sh
tests/: test_registry_and_spec.py
(+24 files in other folders)
